--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ background: white;
   <h1>Artikel Tentang Nabi</h1>
   <article class="browser">
     <h2>Nabi Muhammad SAW</h2>
-    <p>Muhammad bin Abdullah (Arab/Jawi: مُحَمَّدُ بْنُ عَبْدِ اللهِ; disebut [muhammad] 
-(Speaker Icon.svg dengar)) (570 M-8 Jun 632 M)[1] merupakan nabi dan rasul 
-yang dipemat Islam.[2] Lebih dikenali sebagai Muhammad (Arab/Jawi: محمّد) atau 
-Nabi Muhammad (Arab/Jawi: نبي محمّد), baginda juga adalah pemimpin yang menyatukan 
-Semenanjung Arab kepada satu tatanegara di bawah pemerintahan Islam.[3] Muhammad 
-dianggap oleh umat Islam sebagai pemulih keimanan monoteistik ajaran nabi-nabi 
-terdahulu yang dibawa oleh Nabi Adam, Nuh, Ibrahim, Musa, Isa dan nabi-nabi yang 
-lain.[4][5][6][7] Sumber:https://ms.wikipedia.org/wiki/Nabi_Muhammad_SAW</p> 
+    <p>Muhammad bin Abdullah (Arab/Jawi: مُحَمَّد بن عَبْد اللهِ; disebut [muħammæd] (Speaker
+Icon.svg dengar)) (570 M–8 Jun 632 M)[1] merupakan nabi dan rasul yang dipemat 
+Islam. [2] Lebih dikenali sebagai Muhammad (Arab/Jawi: محمد) atau Nabi Muhammad
+(Arab/Jawi: نَبِي مُحَمَّد), baginda juga adalah pemimpin yang menyatukan Semenanjung 
+Arab kepada satu tatanegara di bawah pemerintahan Islam.[3] Muhammad dianggap 
+oleh umat Islam sebagai pemulih keimanan monoteistik ajaran nabi-nabi terdahulu 
+yang dibawa oleh Nabi Adam, Nuh, Ibrahim, Musa, Isa dan nabi-nabi yang lain.[4]
+[5][6][7] Sumber:https://ms.wikipedia.org/wiki/Nabi_Muhammad_SAW</p> 
   </article>
   <article class="browser">
     <h2>Nabi Ibrahim a.s.</h2>
